5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1723_2498.log
== SUBMITION (2019-05-09 11:27:21) 
-- CODE:
hA = int(input("escreva: "))
hB = int(input("escreva: "))
cA = float(input("escreva: "))
cB = float(input("escreva: "))

percA=pA/100
percB=pB/100

while(hA<hB):
	hA=hA+(hA*percA)
	hB=hB+(hB*percB)
	ano=ano+1
	
print(ano)
-- EXECUTION TIME:
0.139556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 6, in <module>
    percA=pA/100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:38) 
-- CODE:
hA = int(input("escreva: "))
hB = int(input("escreva: "))
cA = float(input("escreva: "))
cB = float(input("escreva: "))

percA=pA/100
percB=pB/100

ano=0

while(hA<hB):
	hA=hA+(hA*percA)
	hB=hB+(hB*percB)
	ano=ano+1
	
print(ano)
-- EXECUTION TIME:
0.140883
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 6, in <module>
    percA=pA/100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:59) 
-- CODE:
hA = int(input("escreva: "))
hB = int(input("escreva: "))
cA = float(input("escreva: "))
cB = float(input("escreva: "))

percA=pA/100
percB=pB/100

ano=0

while(hA<hB):
	hA=hA+(hA*percA)
	hB=hB+(hB*percB)
	ano=ano+1
	
print(ano)
-- EXECUTION TIME:
0.126882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 6, in <module>
    percA=pA/100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:28:41) 
-- CODE:
hA = int(input("escreva: "))
hB = int(input("escreva: "))
pA = float(input("escreva: "))
pB = float(input("escreva: "))

percA=pA/100
percB=pB/100

ano=0

while(hA<hB):
	hA=hA+(hA*percA)
	hB=hB+(hB*percB)
	ano=ano+1
print(ano)
-- EXECUTION TIME:
0.201803
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
